--- a/lecture6/lecture6.ipynb
+++ b/lecture6/lecture6.ipynb
@@ -25,15 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.545762Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.545559Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.551299Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.550671Z"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def is_palindrome(s):\n",
@@ -58,7 +51,31 @@
     "    True\n",
     "    >>> test = 'nurse run'\n",
     "    \"\"\"\n",
-    "    return True"
+    "    cleaned = s.replace(\" \", \"\").casefold()\n",
+    "    return cleaned == cleaned[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(is_palindrome(\"radar\"))                     # True\n",
+    "print(is_palindrome(\"A man a plan a canal Panama\")) # True\n",
+    "print(is_palindrome(\"hello\"))                     # False\n",
+    "print(is_palindrome(\"nurses run\"))                # True"
    ]
   },
   {
@@ -84,15 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.552992Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.552836Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.555477Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.554979Z"
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def are_anagrams(s1, s2):\n",
@@ -121,7 +131,32 @@
     "    >>> test2 == 'hypnotist'\n",
     "    True\n",
     "    \"\"\"\n",
-    "    pass"
+    "    cleaned1 = \"\".join(ch.lower() for ch in s1 if not ch.isspace())\n",
+    "    cleaned2 = \"\".join(ch.lower() for ch in s2 if not ch.isspace())\n",
+    "    return sorted(cleaned1) == sorted(cleaned2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(are_anagrams(\"listen\", \"silent\"))        # True\n",
+    "print(are_anagrams(\"Orchestra\", \"Carthorse\"))  # True\n",
+    "print(are_anagrams(\"hello\", \"world\"))          # False\n",
+    "print(are_anagrams(\"Pythonist\", \"hypnotist\"))  # True"
    ]
   },
   {
@@ -148,15 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.557101Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.556939Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.559605Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.559113Z"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_median(nums):\n",
@@ -185,7 +213,39 @@
     "    2.5\n",
     "    >>> nums == [1.0, 3.0, 2.0, 4.0]\n",
     "    \"\"\"\n",
-    "    pass"
+    "    if not nums:\n",
+    "        return None\n",
+    "    sorted_nums = sorted(nums)\n",
+    "    n = len(sorted_nums)\n",
+    "    midian = n // 2\n",
+    "\n",
+    "    if n % 2 == 1:\n",
+    "        return sorted_nums[midian]\n",
+    "    else:\n",
+    "        return (sorted_nums[midian - 1] + sorted_nums[midian]) / 2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "1.5\n",
+      "None\n",
+      "2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(find_median([1.0, 3.0, 2.0]))        # 2.0\n",
+    "print(find_median([1.0, 2.0, 0.0, 4.0]))  # 1.5\n",
+    "print(find_median([]))                    # None\n",
+    "print(find_median([1.0, 3.0, 2.0, 4.0]))  # 2.5"
    ]
   },
   {
@@ -214,15 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.561205Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.561058Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.563631Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.563104Z"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def insertion_sort(nums):\n",
@@ -239,7 +292,40 @@
     "    >>> insertion_sort([])\n",
     "    []\n",
     "    \"\"\"\n",
-    "    pass"
+    "    sorted_list = []\n",
+    "    for n in nums:\n",
+    "        inserted = False\n",
+    "        for i in range(len(sorted_list)):\n",
+    "            if n < sorted_list[i]:\n",
+    "                sorted_list.insert(i, n)\n",
+    "                inserted = True\n",
+    "                break\n",
+    "        if not inserted:\n",
+    "            sorted_list.append(n)\n",
+    "    return sorted_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 4]\n",
+      "[]\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(insertion_sort([3, 1, 2]))       # [1, 2, 3]\n",
+    "print(insertion_sort([3, 1, 2, 4]))    # [1, 2, 3, 4]\n",
+    "print(insertion_sort([]))              # []\n",
+    "print(insertion_sort([5, 4, 3, 2, 1])) # [1, 2, 3, 4, 5]"
    ]
   },
   {
@@ -261,17 +347,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.565255Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.565100Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.567821Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.567315Z"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "def check_perfect(n):\n",
     "    \"\"\"\n",
     "    This function tests if the input number is an abundant, perfect or deficient number.\n",
@@ -296,7 +376,48 @@
     "    >>> check_perfect(28)\n",
     "    0\n",
     "    \"\"\"\n",
-    "    pass"
+    "    if n <= 1:\n",
+    "        return -1\n",
+    "\n",
+    "    divisor_sum = 1\n",
+    "    for i in range(2, int(math.isqrt(n)) + 1):\n",
+    "        if n % i == 0:\n",
+    "            divisor_sum += i\n",
+    "            k = n // i\n",
+    "            if k != i and k != n:\n",
+    "                divisor_sum += k\n",
+    "        if divisor_sum > n:\n",
+    "            return 1\n",
+    "\n",
+    "    if divisor_sum == n:\n",
+    "        return 0\n",
+    "    elif divisor_sum > n:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "-1\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(check_perfect(6))   # 0 (perfect)\n",
+    "print(check_perfect(5))   # -1 (deficient)\n",
+    "print(check_perfect(12))  # 1 (abundant)\n",
+    "print(check_perfect(28))  # 0 (perfect)"
    ]
   },
   {
@@ -330,7 +451,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "introduction-to-python-new",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -344,9 +465,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
